--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.49",
+        "rollup": "^3.29.5",
         "tailwindcss": "^3.4.17",
-        "vite": "^4.0.0"
+        "vite": "^4.5.5"
     }
 }
